--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -962,4 +962,6 @@
     <string name="loading_recipients">Loading contacts and groups</string>
     <string name="no_recipients">No possible recipients</string>
 
+     <!-- Toast when storage is full -->
+    <string name="storage_is_full">The messaging database is full. Please delete some conversations.</string>
 </resources>
