Add option for waking up the screen when a new SMS/MMS is received
Default is off, option stored in the app settings.

Change-Id: Id3da2656da44e5051d4b36bf064db83faf919b5d
Signed-off-by: Dan Trifan <jimsth@gmail.com>

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -906,6 +906,9 @@
     <!-- QM - Quick reply -->
     <string name="qm_quick_reply">Reply</string>
     <string name="qm_mark_read">Read</string>
+<!-- Screen on when SMS/MMS is received -->
+    <string name="pref_title_wake_screen_on_incoming_sms">Screen on for new SMS/MMS</string>
+    <string name="pref_summary_wake_screen_on_incoming_sms">The screen will be powered on if a new SMS or MMS is received.</string>
 
     <!-- Privacy mode -->
     <string name="pref_title_notification_privacy_mode_enabled">Privacy mode</string>
