--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -964,4 +964,14 @@
 
      <!-- Toast when storage is full -->
     <string name="storage_is_full">The messaging database is full. Please delete some conversations.</string>
+
+    <!-- Delay delivery -->
+    <string name="pref_title_send_delay">Delivery delay</string>
+    <string name="send_delay_immediate">Send immediately</string>
+    <string name="send_delay_3seconds">3 seconds</string>
+    <string name="send_delay_5seconds">5 seconds</string>
+    <string name="send_delay_10seconds">10 seconds</string>
+    <string name="send_delay_20seconds">20 seconds</string>
+    <string name="send_delay_30seconds">30 seconds</string>
+    <string name="sent_countdown">Message delivery countdown</string>
 </resources>
